--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ h2 {
 a {
     text-decoration: none;
     color: var(--green-light);
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 header {
